add support for ycsb with mongodb

--- a/roles/bench_fioseq/tasks/start.yml
+++ b/roles/bench_fioseq/tasks/start.yml
@@ -8,7 +8,7 @@
   command: 'kubectl get pods -l {{ bench_fioseq_podlabel }} --namespace={{ bench_fioseq_namespace }} --no-headers -o custom-columns=":metadata.name"'
   register: podlist
 
-- name: wait for fio pod completion
+- name: wait for fio test completion
   command: 'kubectl wait --for=condition=Ready pod/{{ item }} --namespace={{ bench_fioseq_namespace }} --timeout={{ bench_fioseq_maxtime_sec }}s'
   with_items: "{{ podlist.stdout_lines }}"
 ...
