--- a/roles/bench_ycsb/files/ycsb_job.yaml
+++ b/roles/bench_ycsb/files/ycsb_job.yaml
@@ -21,7 +21,7 @@ spec:
         command: ["/bin/sh"]
         args: ["-c", "touch /benchout/benchmark.completed.txt; sleep 3600"]
       initContainers:
-      - name: ycsb-container
+      - name: ycsb-load
         image: quay.io/mpillai/ycsb
         volumeMounts:
           - mountPath: /benchout
@@ -34,8 +34,25 @@ spec:
             ; bin/ycsb load mongodb -s 
             -P workloads/workloada 
             -p mongodb.url='mongodb://mongo-0.mongo:27017/ycsb?w=0'
-            -p recordcount=1000000 
+            -p recordcount=20000000 
             -threads 16 
+            > /benchout/ycsb.load.txt
+      - name: ycsb-run
+        image: quay.io/mpillai/ycsb
+        volumeMounts:
+          - mountPath: /benchout
+            name: output-volume
+        command: ["/bin/sh"]
+        args: 
+          - "-c"
+          - >
+            cd /ycsb/ycsb-latest 
+            ; bin/ycsb run mongodb -s 
+            -P workloads/workloada 
+            -p mongodb.url='mongodb://mongo-0.mongo:27017/ycsb'
+            -p recordcount=20000000 
+            -p operationcount=10000000 
+            -threads 8 
             > /benchout/ycsb.run.txt
       restartPolicy: Never
 ...
