--- a/roles/bench_ycsb/tasks/gather.yml
+++ b/roles/bench_ycsb/tasks/gather.yml
@@ -7,17 +7,17 @@
 
 - name: create directory for storing ycsb pod output
   file: 
-    path: '{{ run_dir}}/{{ item }}'
+    path: '{{ run_dir }}/{{ role_name }}/{{ item }}'
     state: directory
   with_items: "{{ podlist.stdout_lines }}"
 
 - name: fetch output from ycsb pod
-  command: 'kubectl cp {{ bench_ycsb_namespace }}/{{ item }}:{{ bench_ycsb_podoutdir }} {{ run_dir }}/{{ item}}'
+  command: 'kubectl cp {{ bench_ycsb_namespace }}/{{ item }}:{{ bench_ycsb_podoutdir }} {{ run_dir }}/{{ role_name }}/{{ item}}'
   with_items: "{{ podlist.stdout_lines }}"
 
 - name: get ycsb pod location
   shell: 'kubectl get pods -l {{ bench_ycsb_podlabel }} --namespace={{ bench_ycsb_namespace }} -o wide >> {{ run_dir }}/out.{{ role_name }}.txt'
 
 - include_role:
-    name: '{{ bench_ycsb_db }}'
+    name: '{{ bench_ycsb_dbrole }}'
 ...
