--- a/roles/pausefor_custombench/tasks/main.yml
+++ b/roles/pausefor_custombench/tasks/main.yml
@@ -4,6 +4,6 @@
 - pause:
     prompt: "run custom benchmark. after benchmark completion, ctrl-c c to continue"
     seconds: "{{ pausefor_custombench_wait_secs }}"
-  when: benchmark_mode == "run"
+  when: benchmark_mode == "start"
 
 ...
