--- a/roles/bench_fioseq/tasks/stop.yml
+++ b/roles/bench_fioseq/tasks/stop.yml
@@ -2,5 +2,5 @@
 # tasks file for bench_fioseq stop
 
 - name: stop fio pod
-  command: 'kubectl delete -f {{ role_path }}/files/fio_job.yaml --namespace={{ bench_fioseq_namespace }}'
+  command: 'kubectl delete -f {{ run_dir }}/{{ role_name}}/fio_job.yaml --namespace={{ bench_fioseq_namespace }}'
 ...
