--- a/roles/collect_sysstat/tasks/gather.yml
+++ b/roles/collect_sysstat/tasks/gather.yml
@@ -6,13 +6,17 @@
   register: podlist
 
 - name: create per-pod directory for storing output
-  file: 
-    path: '{{ run_dir}}/{{ item }}'
+  file:
+    path: '{{ run_dir }}/{{ role_name }}/{{ item }}'
     state: directory
   with_items: "{{ podlist.stdout_lines }}"
 
 - name: fetch output from sysstat pods
-  shell: 'kubectl cp {{ collect_sysstat_namespace }}/{{ item }}:{{ collect_sysstat_podoutdir }} {{ run_dir }}/{{ item}}'
+  command: 'kubectl cp {{ collect_sysstat_namespace }}/{{ item }}:{{ collect_sysstat_podoutdir }} {{ run_dir }}/{{ role_name }}/{{ item }}'
+  with_items: "{{ podlist.stdout_lines }}"
+
+- name: collect df output from sysstat pods
+  shell: 'kubectl exec {{ item }} -n {{ collect_sysstat_namespace }} -- df -h > {{ run_dir }}/{{ role_name }}/{{ item }}/df_h.txt'
   with_items: "{{ podlist.stdout_lines }}"
 
 - name: get sysstat pod locations
