--- a/roles/collect_sysstat/tasks/start.yml
+++ b/roles/collect_sysstat/tasks/start.yml
@@ -1,8 +1,18 @@
 ---
 # tasks file for collect_sysstat start
 
+- name: create directory for storing collect_sysstat output
+  file: 
+    path: '{{ run_dir }}/{{ role_name }}'
+    state: directory
+  
+- name: create job file from template
+  template:
+    src: '{{ role_path }}/templates/sysstat_daemonset.j2'
+    dest: '{{ run_dir }}/{{ role_name }}/sysstat_daemonset.yaml'
+
 - name: start sysstat pods
-  command: 'kubectl create -f {{ role_path}}/files/daemonset_sysstat.yaml'
+  command: 'kubectl create -f {{ run_dir }}/{{ role_name }}/sysstat_daemonset.yaml'
 
 # MTP_TODO
 - name: wait for sysstat pods to come up
