--- a/roles/collect_sysstat/tasks/stop.yml
+++ b/roles/collect_sysstat/tasks/stop.yml
@@ -2,5 +2,5 @@
 # tasks file for collect_sysstat stop
 
 - name: stop sysstat pods
-  command: 'kubectl delete -f {{ role_path }}/files/daemonset_sysstat.yaml'
+  command: 'kubectl delete -f {{ run_dir }}/{{ role_name }}/sysstat_daemonset.yaml'
 ...
