--- a/roles/bench_fiorand/tasks/start.yml
+++ b/roles/bench_fiorand/tasks/start.yml
@@ -6,6 +6,9 @@
     path: '{{ run_dir }}/{{ role_name }}'
     state: directory
 
+- name: create configmap
+  command: 'kubectl create configmap kubuculum-state --from-literal=bench.mode=prepare -n {{ bench_fiorand_namespace }}'
+
 - name: create job file from template
   template:
     src: '{{ role_path }}/templates/fio_job.j2'
@@ -18,7 +21,12 @@
   command: 'kubectl get pods -l {{ bench_fiorand_podlabel }} --namespace={{ bench_fiorand_namespace }} --no-headers -o custom-columns=":metadata.name"'
   register: podlist
 
-- name: wait for fio test completion
-  command: 'kubectl wait --for=condition=Ready pod/{{ item }} --namespace={{ bench_fiorand_namespace }} --timeout={{ bench_fiorand_maxtime_sec }}s'
+# first initContainer completion marks end of prepare phase
+- name: wait for fio prepare phase completion
+  shell: "kubectl describe pod {{ item }} -n {{ bench_fiorand_namespace }} | grep State: | head -n 1 | awk '{print $2}'"
+  register: containerstate
+  until: containerstate.stdout.find("Terminated") != -1
+  retries: 60
+  delay: 60
   with_items: "{{ podlist.stdout_lines }}"
 ...
