--- a/perform_benchrun.yml
+++ b/perform_benchrun.yml
@@ -2,86 +2,64 @@
 ---
 - hosts: localhost
 
-  # Stores all output for each run in a created directory.
+  # Stores all output for each run in a timestamped directory.
   # By default, this dir is created in current dir.
-  # To change that, provide value in inventory file or set:
-  # vars: 
-  #   - run_basedir: /tmp (or whatever)
+  # To change that, provide value for var: run_basedir
+  # either here or in inventory file
 
   tasks:
-  - name: get current directory
-    run_once: true
-    local_action:
-      module: command
-      args: pwd
-    register: run_cwd
-
-  - name: set base directory
-    set_fact:
-      run_pdir: "{{ run_basedir | default(run_cwd.stdout) }}"
-
-  - name: generate run timestamp
-    run_once: true
-    local_action:
-      module: shell
-      args: 'date +%F_%s'
-    register: run_ts
-
-  - name: set run directory
-    set_fact:
-      run_dir: '{{ run_pdir }}/run_{{ run_ts.stdout }}'
-
-  - name: create run directory
-    run_once: true
-    local_action:
-      module: file
-      path: '{{ run_dir }}'
-      state: directory
-
-  - name: create namespace for benchmark resources 
-    command: 'kubectl create namespace {{ benchmark_namespace }}'
 
   - include_role:
-      name: collect_sysstat
+      name: create_rundir
+
+  - name: create namespace for benchmark resources 
+    command: 'kubectl create namespace {{ run_namespace }}'
+
+  - include_role:
+      name: '{{ stats_role }}'
     vars: 
-      benchmark_mode: start
+      stats_mode: start
     when: stats_enabled is defined and stats_enabled
 
   - include_role:
-      name: '{{ benchmark_name }}'
+      name: '{{ benchmark_role }}'
     vars: 
-      benchmark_mode: start
+      benchmark_mode: prepare
 
   - include_role:
-      name: '{{ benchmark_name }}'
+      name: util_dropcaches
+    when: dropcaches_postprepare
+
+  - include_role:
+      name: '{{ benchmark_role }}'
     vars: 
       benchmark_mode: run
 
   - include_role:
-      name: '{{ benchmark_name }}'
+      name: '{{ benchmark_role }}'
     vars: 
       benchmark_mode: gather
 
   - include_role:
-      name: collect_sysstat
+      name: '{{ stats_role }}'
     vars: 
-      benchmark_mode: gather
+      stats_mode: gather
     when: stats_enabled is defined and stats_enabled
 
   - include_role:
-      name: get_info
+      name: get_envinfo
 
   - include_role:
-      name: '{{ benchmark_name }}'
+      name: '{{ benchmark_role }}'
     vars: 
-      benchmark_mode: stop
+      benchmark_mode: cleanup
 
   - include_role:
-      name: collect_sysstat
+      name: '{{ stats_role }}'
     vars: 
-      benchmark_mode: stop
+      stats_mode: stop
     when: stats_enabled is defined and stats_enabled
 
   - name: delete namespace for benchmark resources 
-    command: 'kubectl delete namespace {{ benchmark_namespace }}'
+    command: 'kubectl delete namespace {{ run_namespace }}'
 ...
