--- a/roles/bench_fiorand/tasks/main.yml
+++ b/roles/bench_fiorand/tasks/main.yml
@@ -1,15 +1,5 @@
 ---
-# tasks file for bench_fiorand
 
-- include_tasks: start.yml
-  when: benchmark_mode == "start"
+- include_tasks: '{{ benchmark_mode }}.yml'
 
-- include_tasks: run.yml
-  when: benchmark_mode == "run"
-
-- include_tasks: gather.yml
-  when: benchmark_mode == "gather"
-
-- include_tasks: stop.yml
-  when: benchmark_mode == "stop"
 ...
