--- a/roles/bench_fiorand/defaults/main.yml
+++ b/roles/bench_fiorand/defaults/main.yml
@@ -1,8 +1,17 @@
 ---
-# defaults file for bench_fiorand
 
-# default namespace
-bench_fiorand_namespace: '{{ benchmark_namespace }}'
+#
+# variables similar to the below are likely to be present in different bench roles
+#
+
+# output directory for run
+bench_fiorand_pdir: '{{ run_dir }}'
+
+# directory for role's output
+bench_fiorand_dir: '{{ run_dir }}/{{ role_name }}'
+
+# namespace
+bench_fiorand_namespace: '{{ run_namespace }}'
 
 # label on pods
 bench_fiorand_podlabel: "type=benchmark-pod"
@@ -13,8 +22,30 @@ bench_fiorand_podoutdir: /benchout
 # main container name
 bench_fiorand_container: "benchmark-complete"
 
+# configmap to trigger benchmark phase transition
+bench_fiorand_configmap: "bench-fiorand-cfgmap"
+bench_fiorand_mapkey: "bench.phase"
+bench_fiorand_initphase: "prepare"
+bench_fiorand_nextphase: "run"
+
+# sequence number of prepwait initContainer
+bench_fiorand_prepc: 2
+
+# expected time for prepare phase
+bench_fiorand_prep_sec: 120
+
+# time between retries waiting for prepare phase completion
+bench_fiorand_prepretry_sec: 60
+
+# number of retries waiting for prepare phase completion
+bench_fiorand_prep_retries: 60
+
 # maximum time for a run; used for wait timeout
 bench_fiorand_maxtime_sec: 36000
+
+#
+# variables likely to be specific to this benchmark
+#
 
 # pvc size; limit on data set size
 bench_fiorand_pvcsize_gb: 8
@@ -36,4 +67,5 @@ bench_fiorand_iodepth: 32
 
 # run time for time based job
 bench_fiorand_run_sec: 60
+
 ...
