--- a/roles/bench_fioseq/tasks/main.yml
+++ b/roles/bench_fioseq/tasks/main.yml
@@ -1,12 +1,5 @@
 ---
-# tasks file for bench_fioseq
 
-- include_tasks: start.yml
-  when: benchmark_mode == "start"
+- include_tasks: '{{ benchmark_mode }}.yml'
 
-- include_tasks: gather.yml
-  when: benchmark_mode == "gather"
-
-- include_tasks: stop.yml
-  when: benchmark_mode == "stop"
 ...
