--- a/roles/bench_fioseq/tasks/cleanup.yml
+++ b/roles/bench_fioseq/tasks/cleanup.yml
@@ -1,5 +1,6 @@
 ---
 
 - name: stop fio pod
-  command: 'kubectl delete -f {{ run_dir }}/{{ role_name}}/fio_job.yaml -n {{ bench_fioseq_namespace }}'
+  command: 'kubectl delete -f {{ bench_fioseq_dir }}/fio_job.yaml -n {{ bench_fioseq_namespace }}'
+
 ...
