--- a/roles/bench_ycsb/tasks/cleanup.yml
+++ b/roles/bench_ycsb/tasks/cleanup.yml
@@ -1,7 +1,14 @@
 ---
-- name: stop ycsb pod
-  command: 'kubectl delete -f {{ run_dir }}/{{ role_name }}/ycsb_job.yaml --namespace={{ bench_ycsb_namespace }}'
+
+- name: stop fio pod
+  command: 'kubectl delete -f {{ bench_ycsb_dir }}/ycsb_job.yaml -n {{ bench_ycsb_namespace }}'
+
+- name: delete benchmark configmap
+  command: 'kubectl delete configmap {{ bench_ycsb_configmap }} -n {{ bench_ycsb_namespace }}'
 
 - include_role:
     name: '{{ bench_ycsb_dbrole }}'
+  vars:
+    db_mode: stop
+
 ...
