--- a/roles/db_mongodb/tasks/main.yml
+++ b/roles/db_mongodb/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - include_tasks: start.yml
-  when: benchmark_mode == "start"
+  when: db_mode == "start"
 
 - include_tasks: gather.yml
-  when: benchmark_mode == "gather"
+  when: db_mode == "gather"
 
 - include_tasks: stop.yml
-  when: benchmark_mode == "stop"
+  when: db_mode == "stop"
 ...
