reworked roles db_mongodb

--- a/roles/db_mongodb/defaults/main.yml
+++ b/roles/db_mongodb/defaults/main.yml
@@ -1,7 +1,12 @@
 ---
-# defaults file for db_mongodb
 
-# default namespace
+# output directory for run
+db_mongodb_pdir: '{{ run_dir }}'
+
+# directory for role's output
+db_mongodb_dir: '{{ db_mongodb_pdir }}/{{ role_name }}'
+
+# namespace
 db_mongodb_namespace: '{{ run_namespace }}'
 
 # label on pods
@@ -10,7 +15,7 @@ db_mongodb_podlabel: "role=mongo"
 # name of container in mongodb pod
 db_mongodb_container: "mongo"
 
-# max time to wait for mongo pods ready
+# max time to wait for mongo pods to be ready
 db_mongodb_timetoready_sec: 600
 
 ...
