--- a/roles/get_envinfo/tasks/main.yml
+++ b/roles/get_envinfo/tasks/main.yml
@@ -3,4 +3,8 @@
 
 - name: get node info 
   shell: 'kubectl get nodes >> {{ run_dir }}/out.{{ role_name }}.txt'
+
+- name: get ceph nodes
+  shell: 'echo "OCS nodes:" >> {{ run_dir }}/out.{{ role_name }}.txt; kubectl get nodes -l {{ get_envinfo_cephnodelabel }} >> {{ run_dir }}/out.{{ role_name }}.txt'
+
 ...
